--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^5.0.1",
     "node-schedule": "^1.3.0",
+    "request": "^2.85.0",
     "twit": "^2.2.9"
   }
 }
