--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^5.0.1",
+    "google-translate-api": "^2.3.0",
     "node-schedule": "^1.3.0",
     "request": "^2.85.0",
     "twit": "^2.2.9"
